# WattProof

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CODEX_LOG.md  Caddyfile  Dockerfile  GROUND_TRUTH.md  LICENSE  Makefile  PLAN.md  README.md  SUBMISSION.md  TODO.md  asset-manifest.json  compose.yaml  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.py
.github/workflows/: verify.yml
billhawk/: __init__.py  app.py  audit.py  cli.py  extract.py  fixtures.py  models.py  tariffs.py
billhawk/data/: rates.json
billhawk/static/: app.js
billhawk/templates/: index.html
docs/screenshots/: README.md
fixtures/: authentic-extraction.json  expected-authentic-audit.json  synthetic-altered-extraction.json
scripts/: fetch-public-samples.sh
sources/: pge-residential-baseline-2022-06-01-present.xlsx  pge-residential-inclu-tou-2022-06-01-to-2022-11-30.xlsx  pge-residential-inclu-tou-2022-12-01-to-2022-12-31.xlsx  pge-residential-rates-2018-03-01-to-2018-08-31.xlsx  provenance.json
tests/: test_audit_service.py  test_backend_acceptance_boundaries.py  test_billhawk.py  test_exact_json_and_context.py  test_multi_utility_web.py  test_numeric_domain.py  test_reconcile.py  test_rendered_extraction.py  test_utility_api_validation.py  test_utility_fixtures.py  test_utility_models.py  test_wattproof.py
wattproof/: __init__.py  adapters.py  app.py  audit.py  audit_service.py  cli.py  codex.py  extract.py  fixtures.py  legacy.py  models.py  numeric.py  reconcile.py  tariffs.py  utility_fixtures.py  utility_models.py
(+6 files in other folders)
