[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "billhawk"
version = "0.1.0"
description = "Evidence-grounded residential electricity bill auditing"
requires-python = ">=3.12"
dependencies = [
  "Flask>=3.1,<4",
  "openai>=1.99,<2",
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = ["mypy>=1.15,<2", "pytest>=9,<10", "ruff>=0.11,<1"]

[project.scripts]
billhawk = "billhawk.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.setuptools.package-data]
billhawk = ["data/*.json", "templates/*.html", "static/*.css"]
